RESOLVED FIXED146073
REGRESSION (r173283-r173296): Amazon.com front page has no caret in the search field
https://bugs.webkit.org/show_bug.cgi?id=146073
Summary REGRESSION (r173283-r173296): Amazon.com front page has no caret in the searc...
Simon Fraser (smfr)
Reported 2015-06-17 12:21:38 PDT
REGRESSION (r173283-r173296): Amazon.com front page has no caret in the search field
Attachments
Patch (5.19 KB, patch)
2015-06-17 12:22 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2015-06-17 12:22:53 PDT
Simon Fraser (smfr)
Comment 2 2015-06-17 12:23:14 PDT
Simon Fraser (smfr)
Comment 3 2015-06-17 14:09:50 PDT
Note You need to log in before you can comment on or make changes to this bug.