REGRESSION (r173283-r173296): Amazon.com front page has no caret in the search field https://bugs.webkit.org/show_bug.cgi?id=146073 rdar://problem/21022203

Reviewed by Tim Horton.

Source/WebCore:

Text controls (text inputs and textareas) need backing store even when empty, because
they need to be able to paint a caret.

Test: compositing/backing/form-controls-backing.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::isSimpleContainerCompositingLayer):

LayoutTests:

Dump layers for composited text inputs and textareas.

* compositing/backing/form-controls-backing-expected.txt: Added.
* compositing/backing/form-controls-backing.html: Added.

Canonical link: https://commits.webkit.org/164119@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185666 268f45cc-cd09-0410-ab3c-d52691b4dbfc